Bug 455138 - Certain menus extending from panel (application launcher, calendar, network list, etc.) bump other windows out of the way
Summary: Certain menus extending from panel (application launcher, calendar, network l...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: components (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-06-10 18:49 UTC by Michael Marley
Modified: 2022-06-11 19:16 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
Screenshot demonstrating normal condition without menu open (1.81 MB, image/png)
2022-06-10 18:49 UTC, Michael Marley
Details
Screenshot demonstrating error condition with menu open and window bumped out of the way (1.62 MB, image/png)
2022-06-10 18:50 UTC, Michael Marley
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Marley 2022-06-10 18:49:44 UTC
Created attachment 149603 [details]
Screenshot demonstrating normal condition without menu open

SUMMARY
Starting with Plasma 5.25.0, deploying the application launcher, calendar, or other menus from the panel causes those menus to bump other windows out of the way.  When the menu is closed, the windows snap back to where they were.

STEPS TO REPRODUCE
1. Start Plasma 5.25
2. Place a window over where the application launcher would be
3. Click the "start button"

OBSERVED RESULT
The window is bumped to the right to not overlap with the menu.

EXPECTED RESULT
The menu should appear over the window as in previous Plasma versions.

SOFTWARE/OS VERSIONS
Linux: 5.18.3
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Comment 1 Michael Marley 2022-06-10 18:50:23 UTC
Created attachment 149604 [details]
Screenshot demonstrating error condition with menu open and window bumped out of the way
Comment 2 Michael Marley 2022-06-10 18:59:53 UTC
Further testing indicates that this issue affects only the Wayland session and not X.
Comment 3 Michael Marley 2022-06-10 22:02:05 UTC
Yet more investigation reveals this bug is in plasma-framework, not kwin.  The bug seems to have been caused by https://invent.kde.org/frameworks/plasma-framework/-/commit/d0c9c659db4b35f98b7d9a3b2f8afb9fe5d73f34 as reverting that commit fixes the problem.
Comment 4 Nate Graham 2022-06-11 00:30:52 UTC
I tested that commit before merging it. I have heard one other report of this issue but I cannot reproduce it myself. :( 

There is an open merge request that may fix it: https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/549. For the people who are experiencing this issue, I would be grateful if you could test that merge request and see if it fixes the issue for you.
Comment 5 Michael Marley 2022-06-11 01:40:49 UTC
I was able to reproduce the problem on every computer I tried, so it is interesting that some systems weren't affected.

That patch did fix the issue though, thanks!
Comment 6 Nate Graham 2022-06-11 19:16:53 UTC
Git commit 1fb2198fcee0ec909fed2f1cb6f2d16f27513d57 by Nate Graham, on behalf of Luca Carlon.
Committed on 11/06/2022 at 19:16.
Pushed by ngraham into branch 'master'.

Add back the WindowsGoBelow panel behavior

In relation to patches in:
- https://invent.kde.org/frameworks/plasma-framework/-/commit/d0c9c659db4b35f98b7d9a3b2f8afb9fe5d73f34
- https://invent.kde.org/frameworks/plasma-framework/-/commit/94a0495f137d966442b13d05dbf8c215260b35f5
...the WindowsGoBelow behavior is missing in the new implementation. Before those
two patches, when Dock type was used, WindowsGoBelow was also set. After the
aforementioned patches, Dock type is still set, but WindowsGoBelow was removed.
This commit fixes that.
FIXED-IN: 5.25

M  +1    -0    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/1fb2198fcee0ec909fed2f1cb6f2d16f27513d57