Add back the WindowsGoBelow panel behavior

In relation to patches in:
- https://invent.kde.org/frameworks/plasma-framework/-/commit/d0c9c659db4b35f98b7d9a3b2f8afb9fe5d73f34
- https://invent.kde.org/frameworks/plasma-framework/-/commit/94a0495f137d966442b13d05dbf8c215260b35f5
...the WindowsGoBelow behavior is missing in the new implementation. Before those
two patches, when Dock type was used, WindowsGoBelow was also set. After the
aforementioned patches, Dock type is still set, but WindowsGoBelow was removed.
This commit fixes that.

BUG: 455138
FIXED-IN: 5.25
(cherry picked from commit 1fb2198fcee0ec909fed2f1cb6f2d16f27513d57)